--- a/basel-reports/src/main/resources/application.properties
+++ b/basel-reports/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://bppldatabase.chqildmqnnzz.us-east-2.rds.amazonaws.com/DQCHECKS?useSSL=false
+spring.datasource.url=jdbc:mysql://bppldatabase.chqildmqnnzz.us-east-2.rds.amazonaws.com/DQCHECKS_copy?useSSL=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=bppltest_write
 spring.datasource.password=WriterPassword
